--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -124,23 +124,23 @@ body {
 }
 
 .border {
-  border: 1px solid #dbe3ef !important;
+  border: 1.5px solid #F0EFFB !important;
 }
 
 .border-right {
-  border-right: 1px solid #dbe3ef !important;
+  border-right: 1.5px solid #F0EFFB !important;
 }
 
 .border-left {
-  border-left: 1px solid #dbe3ef !important;
+  border-left: 1.5px solid #F0EFFB !important;
 }
 
 .border-top {
-  border-top: 1px solid #dbe3ef !important;
+  border-top: 1.5px solid #F0EFFB !important;
 }
 
 .border-bottom {
-  border-bottom: 1px solid #dbe3ef !important;
+  border-bottom: 1.5px solid #F0EFFB !important;
 }
 
 .border-right-0 {
