--- a/src/features/Auth/SignInScreen/style.scss
+++ b/src/features/Auth/SignInScreen/style.scss
@@ -28,4 +28,9 @@ html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p{
     .gradient-custom{
       display: none;
     }
+
+    .gradient-custom-2{
+        height:auto;
+     background-color: #E0DEF7;
+    }
   }
