--- a/src/features/Auth/SignUpScreen/style.scss
+++ b/src/features/Auth/SignUpScreen/style.scss
@@ -29,29 +29,34 @@
 //       display: none;
 //     }
 //   }
+.mobile{
+  // display:none !important;
+}
 
-.SignInScreen {
+
+.SignUpScreen {
   &_Right {
     background-image: url('../../../assets/images/background_login.png');
     background-size:cover;
+    
 }
 &_mobile{
   opacity: 0;
 }
 }
 @media screen and (max-width: 960px) {
-  
 
 }
 
 @media screen and (max-width: 991px) {
-  .SignInScreen {
+  .SignUpScreen {
     &_Right {
       display: none;
     }
+
     &_mobile{
       opacity:1;
-      cursor: pointer;
+      cursor:pointer;
     }
   }
 
