--- a/src/general/components/Header/HeaderLandingPage/style.scss
+++ b/src/general/components/Header/HeaderLandingPage/style.scss
@@ -10,7 +10,8 @@
     }
 
     &_item{
-        padding: 8px 13px !important;
+        margin : 4px 0;
+        padding: 4px 8px !important;
         color:black !important;
         border-radius: 4px;
     }
@@ -32,10 +33,8 @@
         float:right;
     }
 
-    &_mobile {
-        float: right;
-        opacity: 0;
-
+    &_mobile{
+        display:none !important;
     }
 }
 
@@ -51,5 +50,10 @@
         &_left{
             float:none ;
         }
+
+        &_mobile{
+            display:block;
+        }
+
     }
 }
