--- a/src/general/components/Header/HeaderLandingPage/style.scss
+++ b/src/general/components/Header/HeaderLandingPage/style.scss
@@ -1,5 +1,6 @@
 .HeaderLandingPage {
     background-color: rgba(255, 255, 255, 0.4) !important;
+    font-size: 16px;
 
     .navbar-toggler:focus {
         box-shadow: none;
@@ -10,8 +11,8 @@
     }
 
     &_item{
-        margin : 4px 0;
-        padding: 4px 8px !important;
+        // margin:6px 0;
+        // padding: 5px 8px !important;
         color:black !important;
         border-radius: 4px;
     }
@@ -38,7 +39,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
     .HeaderLandingPage{
         &_headerText{
             display:none;
